# Playground

./: .gitignore  Cargo.toml  README.md
resources/brainfuck_programs/: brainfuck.b  fib.wip.b  hello_world.b  how_to_run.info  shortest_hello_world.b  test.b
src/: main.rs
